package dat.backend.model.entities;

public class RoofTile extends ExtraDimensionMaterial {

    public RoofTile(int width, int height) {
        super(width, height);
    }

}
