package dat.backend.model.entities;

public class Screw extends ExtraDiameterMaterial{


        public Screw(int diameter) {
            super(diameter);
        }
}
