package dat.backend.model.entities;

public class Wood {
}
