package dat.backend.model.persistence;

public class MaterialMapper {
}
